--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -16,6 +16,7 @@
   with_items:
     - {path: "{{ semaphore_base_path }}", when: true}
     - {path: "{{ semaphore_config_path }}", when: true}
+    - {path: "{{ semaphore_dyn_config_path }}", when: true}
 
 - name: Ensure semaphore data paths exists
   ansible.builtin.file:
