--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -6,6 +6,8 @@
       You need to define a required configuration setting (`{{ item }}`) for using this role.
   when: "vars[item] == ''"
   with_items:
+    - semaphore_uid
+    - semaphore_gid
     - semaphore_hostname
     - semaphore_admin_password
     - semaphore_admin_name
