--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -17,6 +17,9 @@
     - {path: "{{ semaphore_base_path }}", when: true}
     - {path: "{{ semaphore_config_path }}", when: true}
     - {path: "{{ semaphore_dyn_config_path }}", when: true}
+    - path: "{{ semaphore_customized_container_src_path }}"
+      state: directory
+      when: "{{ semaphore_container_image_customizations_enabled }}"
 
 - name: Ensure semaphore data paths exists
   ansible.builtin.file:
@@ -57,6 +60,29 @@
   community.docker.docker_image:
     name: "{{ semaphore_container_image }}"
     source: "{{ 'pull' if ansible_version.major > 2 or ansible_version.minor > 7 else omit }}"
+
+
+- when: "semaphore_container_image_customizations_enabled | bool"
+  block:
+    - name: Ensure customizations Dockerfile is created
+      ansible.builtin.template:
+        src: "{{ role_path }}/templates/customizations/Dockerfile.j2"
+        dest: "{{ semaphore_customized_container_src_path }}/Dockerfile"
+        owner: "{{ semaphore_uid }}"
+        group: "{{ semaphore_gid }}"
+        mode: 0640
+      register: semaphore_container_image_customizations_dockerfile_result
+
+    - name: Ensure customized container image for Semaphore is built
+      community.docker.docker_image:
+        name: "{{ semaphore_container_image_customized }}"
+        source: build
+        force_source: "{{ semaphore_container_image_customizations_dockerfile_result.changed }}"
+        build:
+          dockerfile: Dockerfile
+          path: "{{ semaphore_customized_container_src_path }}"
+          pull: true
+
 
 - name: Ensure semaphore.service installed
   ansible.builtin.template:
