Add Project source code URL comment

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 
+# Project source code URL: https://github.com/ansible-semaphore/semaphore
+
 semaphore_enabled: true
 semaphore_identifier: semaphore
 
