--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+# SPDX-FileCopyrightText: 2024 MASH project contributors
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 ---
 
 # Project source code URL: https://github.com/ansible-semaphore/semaphore
