--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+# SPDX-FileCopyrightText: 2024 MASH project contributors
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 ---
 
 - name: Ensure semaphore network is created in Docker
