--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,6 @@
+# SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 ---
 semaphore_users: "{{ semaphore_users_auto + semaphore_users_additional }}"
