--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -85,7 +85,9 @@ semaphore_container_image_customized: "localhost/semaphore:{{ semaphore_containe
 semaphore_container_image_final: "{{ semaphore_container_image_customized if semaphore_container_image_customizations_enabled else semaphore_container_image }}"
 
 semaphore_container_image_tag: "v{{ semaphore_version }}"
-semaphore_container_image_registry_prefix: docker.io/
+semaphore_container_image_registry_prefix: "{{ semaphore_container_image_registry_prefix_upstream }}"
+semaphore_container_image_registry_prefix_upstream: "{{ semaphore_container_image_registry_prefix_upstream_default }}"
+semaphore_container_image_registry_prefix_upstream_default: docker.io/
 semaphore_container_image_force_pull: "{{ semaphore_container_image.endswith(':latest') }}"
 
 # Controls whether the semaphore container exposes its HTTP port (as defined by `semaphore_container_http_port`).
