--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -104,7 +104,9 @@ semaphore_container_http_port: 3000
 # A list of additional container networks that the container would be connected to.
 # The role does not create these networks, so make sure they already exist.
 # Use this to expose this container to a reverse proxy, which runs in a different container network.
-semaphore_container_additional_networks: []
+semaphore_container_additional_networks: "{{ semaphore_container_additional_networks_auto + semaphore_container_additional_networks_custom }}"
+semaphore_container_additional_networks_auto: []
+semaphore_container_additional_networks_custom: []
 
 # semaphore_container_labels_traefik_enabled controls whether labels to assist a Traefik reverse-proxy will be attached to the container.
 # See `roles/custom/semaphore_semaphore/templates/labels.j2` for details.
