--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -4,24 +4,24 @@
 
 ---
 
-- name: Check existence of semaphore systemd service
+- name: Check existence of Semaphore systemd service
   ansible.builtin.stat:
     path: "{{ devture_systemd_docker_base_systemd_path }}/{{ semaphore_identifier }}.service"
   register: semaphore_service_stat
 
 - when: semaphore_service_stat.stat.exists | bool
   block:
-    - name: Ensure semaphore service is stopped
+    - name: Ensure Semaphore service is stopped
       ansible.builtin.service:
         name: "{{ semaphore_identifier }}"
         state: stopped
         daemon_reload: true
-    - name: Ensure semaphore service doesn't exist
+    - name: Ensure Semaphore service doesn't exist
       ansible.builtin.file:
         dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ semaphore_identifier }}.service"
         state: absent
 
-    - name: Ensure semaphore base path is files deleted (make sure to delete node data)
+    - name: Ensure Semaphore base path is files deleted (make sure to delete node data)
       ansible.builtin.file:
         path: "{{ semaphore_base_path }}"
         state: absent
