--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -4,7 +4,7 @@
 
 ---
 
-- name: Fail if required semaphore settings not defined
+- name: Fail if required Semaphore settings not defined
   ansible.builtin.fail:
     msg: >-
       You need to define a required configuration setting (`{{ item }}`) for using this role.
