--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,4 +1,5 @@
 # SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+# SPDX-FileCopyrightText: 2023 Slavi Pantaleev
 # SPDX-FileCopyrightText: 2024 MASH project contributors
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
