--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -4,6 +4,15 @@
 
 ---
 
+- name: (Deprecation) Catch and report renamed settings
+  ansible.builtin.fail:
+    msg: >-
+      Your configuration contains a variable, which now has a different name.
+      Please change your configuration to rename the variable (`{{ item.old }}` -> `{{ item.new }}`).
+  when: "item.old in vars"
+  with_items:
+    - {'old': 'semaphore_env_path', 'new': '<removed>'}
+
 - name: Fail if required Semaphore settings not defined
   ansible.builtin.fail:
     msg: >-
