Adopt the common comment
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -108,7 +108,7 @@ semaphore_container_additional_networks_auto: []
 semaphore_container_additional_networks_custom: []
 
 # semaphore_container_labels_traefik_enabled controls whether labels to assist a Traefik reverse-proxy will be attached to the container.
-# See `roles/custom/semaphore_semaphore/templates/labels.j2` for details.
+# See `../templates/labels.j2` for details.
 #
 # To inject your own other container labels, see `semaphore_container_labels_additional_labels`.
 semaphore_container_labels_traefik_enabled: false
