--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -4,13 +4,13 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 ---
-
 - name: Check existence of Semaphore systemd service
   ansible.builtin.stat:
     path: "{{ devture_systemd_docker_base_systemd_path }}/{{ semaphore_identifier }}.service"
   register: semaphore_service_stat
 
-- when: semaphore_service_stat.stat.exists | bool
+- name: Uninstall Semaphore systemd services and files
+  when: semaphore_service_stat.stat.exists | bool
   block:
     - name: Ensure Semaphore systemd service is stopped
       ansible.builtin.service:
