Replace `semaphore_database_host` with `semaphore_database_hostname`
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -209,7 +209,7 @@ semaphore_admin_password: ''
 semaphore_admin_name: ''
 semaphore_admin_email: ''
 
-semaphore_database_host: ''
+semaphore_database_hostname: ''
 semaphore_database_port: 5432
 semaphore_database_name: semaphore
 semaphore_database_username: semaphore
