--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -28,3 +28,24 @@
     - semaphore_admin_name
     - semaphore_admin_email
     - semaphore_access_key_encryption
+
+- name: Run if Traefik is enabled
+  when: semaphore_container_labels_traefik_enabled | bool
+  block:
+    - name: Fail if required Semaphore Traefik settings not defined
+      ansible.builtin.fail:
+        msg: >-
+          You need to define a required configuration setting (`{{ item }}`).
+      when: "lookup('vars', item, default='') | string | length == 0"
+      with_items:
+        - semaphore_container_labels_traefik_hostname
+        - semaphore_container_labels_traefik_path_prefix
+
+    # We ensure it doesn't end with a slash, because we handle both (slash and no-slash).
+    # Knowing that `semaphore_container_labels_traefik_path_prefix` does not end with a slash
+    # ensures we know how to set these routes up without having to do "does it end with a slash" checks elsewhere.
+    - name: Fail if semaphore_container_labels_traefik_path_prefix ends with a slash
+      ansible.builtin.fail:
+        msg: >-
+          semaphore_container_labels_traefik_path_prefix (`{{ semaphore_container_labels_traefik_path_prefix }}`) must either be `/` or not end with a slash (e.g. `/semaphore`).
+      when: "semaphore_container_labels_traefik_path_prefix != '/' and semaphore_container_labels_traefik_path_prefix[-1] == '/'"
