--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -32,7 +32,7 @@
 - name: Run if Traefik is enabled
   when: semaphore_container_labels_traefik_enabled | bool
   block:
-    - name: Fail if required Semaphore Traefik settings not defined
+    - name: Fail if Traefik settings required for Semaphore are not defined
       ansible.builtin.fail:
         msg: >-
           You need to define a required configuration setting (`{{ item }}`).
