--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -26,6 +26,7 @@
     - semaphore_hostname
     - semaphore_path_prefix
     - semaphore_container_network
+    - semaphore_admin_username
     - semaphore_admin_password
     - semaphore_admin_name
     - semaphore_admin_email
