--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -35,7 +35,7 @@
 - name: Ensure Semaphore support files installed
   ansible.builtin.template:
     src: "{{ role_path }}/templates/{{ item }}.j2"
-    dest: "{{ semaphore_config_path }}/{{ item }}"
+    dest: "{{ semaphore_base_path }}/{{ item }}"
     owner: "{{ semaphore_uid }}"
     group: "{{ semaphore_gid }}"
     mode: "0640"
