Update validate_config.yml: add items to the task for checking settings
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/validate_config.yml
+++ b/tasks/validate_config.yml
@@ -24,6 +24,8 @@
     - semaphore_uid
     - semaphore_gid
     - semaphore_hostname
+    - semaphore_path_prefix
+    - semaphore_container_network
     - semaphore_admin_password
     - semaphore_admin_name
     - semaphore_admin_email
