--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -208,6 +208,9 @@ semaphore_systemd_required_services_list_custom: []
 # List of systemd services that the Semaphore systemd service wants
 semaphore_systemd_wanted_services_list: []
 
+# Specify username for passwd file
+semaphore_username: 'semaphore'
+
 semaphore_database_mysql_username: semaphore
 semaphore_database_mysql_password: ''
 semaphore_database_mysql_port: 3306
@@ -222,8 +225,6 @@ semaphore_database_name: semaphore
 # Specify database to use
 # Valid values: mysql, postgres, bolt
 semaphore_database_dialect: ''
-
-semaphore_username: 'semaphore'
 
 semaphore_admin_username: admin
 semaphore_admin_password: ''
