--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -226,6 +226,10 @@ semaphore_database_name: semaphore
 # Valid values: mysql, postgres, bolt
 semaphore_database_dialect: ''
 
+# Specify path to directory where cloned repositories and generated files are stored
+# Default: /tmp/semaphore
+semaphore_environment_variables_tmp_path: /tmp/semaphore
+
 semaphore_admin_username: admin
 semaphore_admin_password: ''
 semaphore_admin_name: ''
