Remove `semaphore_customized_container_src_path`
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -34,6 +34,11 @@
         - labels
         - passwd
 
+    - name: Ensure Semaphore image source files path does not exist
+      ansible.builtin.file:
+        path: "{{ semaphore_customized_container_src_path }}"
+        state: absent
+
     - name: Ensure Semaphore container network does not exist via community.docker.docker_network
       when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
       community.docker.docker_network:
